--- a/src/components/DeviceComponents/Device/Device.css
+++ b/src/components/DeviceComponents/Device/Device.css
@@ -101,6 +101,7 @@
   border-radius: 4px;
   font-size: 0.4rem;
 }
+
 .final-device {
   max-height: 280px;
   transition: max-height 0.5s ease-in-out;
@@ -113,4 +114,20 @@
   position: absolute;
   bottom: 0rem;
   left: 0rem;
+}
+.device-expand {
+  position: absolute;
+  bottom: 0rem;
+  right: 0rem;
+  padding: 0.4rem;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s ease-in-out;
+}
+.device-expand:hover {
+  background-color: var(--bck-grey-hover-color);
+  color: var(--hover-color);
+  cursor: pointer;
 }
