--- a/src/components/DeviceComponents/Device/SmartAlarmSiren/SmartSirenAlarm.css
+++ b/src/components/DeviceComponents/Device/SmartAlarmSiren/SmartSirenAlarm.css
@@ -65,7 +65,11 @@
 .siren-alarm-options {
   width: 80px;
   max-height: 100%;
-  margin-left: 0.5rem;
+  margin-left: 0.7rem;
+}
+.siren-alarm-options select,
+.siren-alarm-options input {
+  width: 90%;
 }
 .siren-alarm-volume {
   display: flex;
