--- a/src/components/SceneComponents/Scene/Schedule/Schedule.css
+++ b/src/components/SceneComponents/Scene/Schedule/Schedule.css
@@ -101,6 +101,7 @@
 }
 .schedule-repeat {
   width: 100%;
+  user-select: none;
   display: flex;
   align-items: center;
   justify-content: center;
