--- a/src/components/DeviceComponents/DeletedDevices/DeletedDevices.css
+++ b/src/components/DeviceComponents/DeletedDevices/DeletedDevices.css
@@ -1,5 +1,4 @@
 .deleted-devices-container {
-  width: 250px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -7,6 +6,7 @@
   position: fixed;
   bottom: 2rem;
   right: 2rem;
+  z-index: 1;
 }
 .deleted-devices-outside {
   padding: 0.5rem;
@@ -15,11 +15,11 @@
   box-shadow: var(--box-shadow-default);
   margin-bottom: 1rem;
   border-radius: 10px;
-  max-width: 100%;
-  width: 100%;
+  width: 80vw;
+  max-width: 280px;
   max-height: 280px;
   transition: all 0.3s ease-in-out;
-  z-index: -1;
+  z-index: 1;
   position: relative;
   visibility: visible;
 }
@@ -27,6 +27,7 @@
 .deleted-devices-outside-hidden {
   overflow: hidden;
   visibility: hidden;
+  width: 0;
   max-width: 0;
   max-height: 0;
 }
@@ -44,6 +45,7 @@
 }
 .deleted-devices-hidden {
   opacity: 0;
+  overflow: hidden;
 }
 .deleted-devices::before {
   content: '';
@@ -51,14 +53,13 @@
   z-index: -1;
   bottom: -5px;
   right: 40px;
-  border-radius: 1px;
+  border-radius: 2px;
   width: 20px;
   height: 20px;
   transform: rotate(45deg);
   background-color: white;
 }
 .deleted-devices img {
-  /* width: 100%; */
   height: 130px;
   align-self: center;
   justify-self: center;
@@ -113,4 +114,14 @@
 }
 .recycle-bin img {
   width: 100%;
+}
+
+@media (max-width: 768px) {
+  .deleted-devices-container {
+    bottom: 1rem;
+    right: 1rem;
+  }
+  .recycle-bin {
+    width: 70px;
+  }
 }
