--- a/src/components/DeviceComponents/Device/SmartLed/SmartLed.css
+++ b/src/components/DeviceComponents/Device/SmartLed/SmartLed.css
@@ -14,6 +14,9 @@
 }
 .smart-led-tab {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
 }
 .custom-tabs {
   margin-top: 0.5rem;
@@ -67,26 +70,30 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 80px;
-  height: 80px;
+  width: 75px;
+  height: 75px;
   border-radius: 50%;
   cursor: pointer;
+  border: 4px solid #ccc;
+  background-color: transparent;
   transition: all 0.4s ease-in-out;
 }
+
 .slider-item {
   width: 100%;
   margin: 0.5rem 0rem;
   padding: 0 0.2rem;
   display: flex;
+  gap: 0.3rem;
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-around;
 }
 .cold-warm-tab .slider-item {
-  margin: 1.7rem 0;
+  margin: 1rem 0;
 }
 
-.pallete-controll-item {
+.palette-controll-item {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -94,6 +101,11 @@
   margin: 0;
   margin-top: 0.3rem;
 }
+
+.palette-speed {
+  gap: 0.5rem;
+}
+
 .palette-colors {
   align-items: center;
   flex-direction: row;
@@ -107,6 +119,6 @@
 .palette-buttons * {
   margin: 0 0.3rem;
 }
-.pallete-btn-hovered {
+.palette-btn-hovered {
   cursor: pointer;
 }
