--- a/src/components/DeviceComponents/Device/SmartStrip/Switch/Switch.css
+++ b/src/components/DeviceComponents/Device/SmartStrip/Switch/Switch.css
@@ -40,11 +40,13 @@
 }
 
 input:checked + .slider {
-  background-color: #2196f3;
+  /* background-color: #2196f3; */
+  background-color: var(--active-color);
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196f3;
+  /* box-shadow: 0 0 1px #2196f3; */
+  box-shadow: 0 0 1px var(--active-color);
 }
 
 input:checked + .slider:before {
