--- a/src/components/UserProfile/UserProfile.css
+++ b/src/components/UserProfile/UserProfile.css
@@ -1,13 +1,23 @@
-.user-profile * {
+.user-profile-container * {
   margin: 0;
   padding: 0;
 }
-.user-profile {
+.user-profile-container {
+  min-width: 120px;
+  height: 70px;
   display: flex;
   flex-direction: column;
-  min-width: 150px;
-  align-self: flex-start;
+  align-items: center;
+  position: relative;
   justify-content: center;
+  gap: 0.3rem;
+}
+
+.user-profile-top {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  user-select: none;
 }
 .user-img-name {
   display: flex;
@@ -31,20 +41,26 @@
 }
 
 .profile-dropdown-list {
-  background-color: white;
+  width: 140px;
+  border-radius: 5px;
+  position: absolute;
+  visibility: visible;
+  bottom: 0;
+  left: 0;
+  transform: translateY(100%);
   opacity: 1;
-  padding: 0.2rem;
-  max-height: 200px;
-  border-radius: 4px;
-  transform: translateY(0);
+  display: flex;
+  background-color: white;
   box-shadow: var(--box-shadow-default);
-  transition: all 0.3s ease-in-out;
+  z-index: 99;
+  padding: 0.3rem;
+  transition: all 0.2s ease-in-out;
 }
 .profile-dropdown-list-hidden {
-  overflow: hidden;
   opacity: 0;
-  max-height: 0;
-  transform: translateY(-40px);
+  transform: translateY(70%);
+  z-index: -999;
+  visibility: hidden;
 }
 .profile-dropdown-list::before {
   content: '';
@@ -52,7 +68,7 @@
   z-index: -1;
   top: -5px;
   left: 40%;
-  border-radius: 1px;
+  border-radius: 2px;
   width: 20px;
   height: 20px;
   transform: rotate(45deg);
