--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,56 @@
 :root {
-  --hover-color: rgb(28, 69, 253);
+  /* red colors */
+  --custom-red: #e60b0b;
+
+  /* blue colors */
+  --light-blue: #007bff;
+  --very-light-blue: #3395ff;
+  --hover-blue: rgb(35, 68, 255);
+  --active-blue: rgb(35, 68, 255);
+  --hover-light-blue: #75bee9;
+  --active-light-blue: #75bee9;
+
+  /* purple colors */
+  /* --light-purple: rgb(233, 123, 255);
+  --very-light-purple: rgba(240, 189, 250, 0.311);
+  --hover-purple: rgb(228, 93, 255); */
+  --light-purple: rgb(188, 111, 255);
+  --hover-purple: rgb(161, 53, 255);
+  --very-light-purple: rgba(240, 189, 250, 0.311);
+
+  /* hover colors */
+  --active-color: var(--light-purple);
+  --hover-color: var(--hover-purple);
+
+  /* grey colors */
+  --light-grey: rgb(84, 84, 84);
+  --bck-page-default: rgb(227, 227, 227);
   --bck-grey-hover-color: #ccccccc7;
   --bck-grey-active-color: #cccccc87;
-  --bck-hover-color: linear-gradient(to right, #cbcbcba2, #f0f0f069);
-  --box-shadow-default: 1px 1px 14px 1px #888888;
-  --bck-page-default: rgb(227, 227, 227);
-  --custom-red: #e60b0b;
   --transp-grey-bck: #a7a7a7aa;
+  --bck-hover-color: linear-gradient(to right, #cbcbcba2, #f0f0f069);
+
+  /* heights */
+  --toolbar-height: 60px;
+  --navbar-height: 100px;
+
+  /* shadow */
+  --box-shadow-default: 1px 1px 14px 1px #888888;
 }
+html {
+  height: 100vh;
+}
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap');
+* {
+  font-family: 'Red Hat Display', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
 body {
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -16,8 +58,34 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+#root {
+  height: 100%;
+}
+body * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+label {
+  font-size: 14px;
+  font-weight: 600;
+  color: rgb(34, 34, 34);
+}
+input {
+  cursor: revert;
+}
+
+.page-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  height: calc(100% - var(--navbar-height));
+  width: 100%;
+  background-color: var(--bck-page-default);
 }
