--- a/src/pages/ScenePages/AddScene/AddScene.css
+++ b/src/pages/ScenePages/AddScene/AddScene.css
@@ -1,37 +1,10 @@
-.add-scene-container {
-  position: fixed;
-  opacity: 1;
-  visibility: visible;
-  overflow: hidden;
-  top: 4.5rem;
-  left: 0;
-  width: 100%;
-  min-height: 90vh;
-  height: 100%;
-  background-color: var(--transp-grey-bck);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: opacity 0.3s ease-in-out;
-}
-.add-scene-container-hidden {
-  opacity: 0;
-  visibility: hidden;
-  width: 0;
-  height: 0;
-}
 .add-scene {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
   background-color: white;
   width: 400px;
-  height: 520px;
-  padding: 1rem;
   border-radius: 6px;
-  position: relative;
-  box-shadow: 3px 3px 14px 3px #bee2f7;
   overflow: hidden;
 }
 .add-scene-title {
@@ -52,11 +25,13 @@
 }
 
 .add-scene-menu-item {
+  background-color: white;
   transition: all 0.3s;
   padding: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  gap: 1.5rem;
   border: 1px solid black;
   width: 100%;
   height: 80px;
@@ -64,35 +39,37 @@
   border-radius: 4px;
 }
 .add-scene-menu-item:hover {
-  cursor: pointer;
-  border: 1px solid rgb(32, 99, 254);
-  background-color: #c6f3fe77;
+  border: 1px solid var(--hover-color);
+  background-color: var(--very-light-purple);
+}
+.add-scene-menu-item:focus {
+  background-color: var(--very-light-purple);
+  border: 1px solid var(--hover-color);
 }
 .add-scene-menu-item img {
   height: 100%;
 }
 .add-scene-menu-item p {
   margin: 0;
-  margin-left: 1.5rem;
   font-size: 1.2rem;
   font-weight: bolder;
+  text-align: left;
 }
 .add-scene-cancel-btn {
-  position: absolute;
+  background-color: white;
   display: flex;
   align-items: center;
-  bottom: 1rem;
-  right: 1.5rem;
-  color: rgb(84, 84, 84);
-  border: 2px solid rgb(84, 84, 84);
+  align-self: flex-end;
+  color: var(--light-grey);
+  border: 2px solid var(--light-grey);
   padding: 0.2rem 0.3rem;
   border-radius: 4px;
 }
 .add-scene-cancel-btn:hover {
   transition: all 0.2s;
-  color: rgb(250, 29, 29);
+  color: var(--hover-blue);
   cursor: pointer;
-  border: 2px solid rgb(250, 29, 29);
+  border: 2px solid var(--hover-blue);
 }
 .add-scene-cancel-btn p {
   margin: 0;
