--- a/src/pages/ScenePages/Scenes/Scenes.css
+++ b/src/pages/ScenePages/Scenes/Scenes.css
@@ -1,59 +1,16 @@
 .scenes-container {
-  position: relative;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  min-height: 90vh;
   width: 100%;
-  background-color: var(--bck-page-default);
+  height: 100%;
+  padding-top: 0.5rem;
 }
+
 .scenes {
   display: flex;
   justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
-  min-height: 90vh;
+  height: calc(100% - var(--toolbar-height));
   width: 100%;
   padding: 1rem;
-}
-.toolbar-scenes {
-  position: sticky;
-  top: 80px;
-  left: 0;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: flex-start;
-  background-color: white;
-  width: 100%;
-  max-height: 10rem;
-  margin: 0.5rem 0;
-  box-shadow: var(--box-shadow-default);
-  z-index: 9;
-}
-.toolbar-scenes-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0.5rem;
-  margin-left: 3rem;
-}
-.toolbar-scenes-item * {
-  margin: 0;
-}
-.toolbar-scenes-item > span {
-  font-size: 1.2rem;
-  margin-right: 0.4rem;
-}
-@media (max-width: 568px) {
-  .scenes-container {
-    height: 90%;
-  }
-  .scenes {
-    height: 90%;
-  }
-  .toolbar-scenes-item {
-    margin-left: 1.5rem;
-  }
+  overflow: auto;
 }
