--- a/src/components/DeviceComponents/DeletedDevices/DeletedDevices.css
+++ b/src/components/DeviceComponents/DeletedDevices/DeletedDevices.css
@@ -6,7 +6,7 @@
   position: fixed;
   bottom: 2rem;
   right: 2rem;
-  z-index: 1;
+  z-index: 2;
 }
 .deleted-devices-outside {
   padding: 0.5rem;
@@ -16,12 +16,16 @@
   margin-bottom: 1rem;
   border-radius: 10px;
   width: 80vw;
-  max-width: 280px;
+  max-width: 300px;
   max-height: 280px;
+  /* min-height: 200px; */
   transition: all 0.3s ease-in-out;
   z-index: 1;
   position: relative;
   visibility: visible;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .deleted-devices-outside-hidden {
@@ -30,6 +34,9 @@
   width: 0;
   max-width: 0;
   max-height: 0;
+  padding: 0;
+  margin: 0;
+  border: 0;
 }
 .deleted-devices {
   overflow: auto;
@@ -37,10 +44,12 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+  gap: 0.2rem;
   width: 100%;
-  max-height: 130px;
+  max-height: 200px;
   min-height: 80px;
   opacity: 1;
+  margin-bottom: 0.5rem;
   transition: opacity 0.3s ease-in-out;
 }
 .deleted-devices-hidden {
@@ -69,8 +78,8 @@
   display: flex;
   align-items: center;
   width: 100%;
-  justify-content: space-around;
-  margin-top: 0.2rem;
+  justify-content: space-between;
+  padding-top: 0.5rem;
   transition: opacity 0.5s ease-in-out;
 }
 .deleted-devices-toolbar-hidden {
@@ -83,24 +92,29 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.3rem 0.4rem;
-  border-radius: 8px;
+  padding: 0.1rem 0.4rem;
+  border: 1px solid black;
+  border-radius: 4px;
+  background-color: transparent;
 }
 .deleted-devices-toolbar-item p {
   margin: 0;
   margin-left: 0.2rem;
+  font-size: 1.1rem;
 }
 .deleted-devices-toolbar-item:hover {
   cursor: pointer;
 }
 .destroy-all-devices-btn:hover {
   color: var(--custom-red);
+  border-color: var(--custom-red);
 }
 .recover-all-devices-btn:hover {
   color: var(--hover-color);
+  border-color: var(--hover-color);
 }
 .recycle-bin {
-  width: 100px;
+  width: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -116,7 +130,7 @@
   width: 100%;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 968px) {
   .deleted-devices-container {
     bottom: 1rem;
     right: 1rem;
