--- a/src/components/DeviceComponents/Device/SmartStrip/SmartStrip.css
+++ b/src/components/DeviceComponents/Device/SmartStrip/SmartStrip.css
@@ -1,6 +1,5 @@
 /* =====================================================*/
 .smart-strip {
-  margin-bottom: 0.5rem;
   width: 100%;
   background: transparent;
   display: flex;
@@ -8,17 +7,41 @@
   align-items: center;
   justify-content: center;
   font-size: 1.2rem;
+  height: 100%;
+  padding: 0.5rem 0;
+}
+/* =====================================================*/
+.smart-switches-container {
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 200px;
+}
+.smart-switches {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1rem;
 }
 
 /* =====================================================*/
-
+.sensor-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
 .sensor {
   background-color: transparent;
-  width: 100%;
-  margin-left: 2rem;
+  margin-left: 2.5rem;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  gap: 8px;
+  align-items: center;
 }
 .sensor-item {
   margin: 0;
@@ -28,18 +51,10 @@
   width: 7rem;
 }
 .sensor img {
-  max-width: 30px;
+  width: 30px;
 }
 .sensor-item p {
   margin: 0;
-}
-/* =====================================================*/
-.smart-switches {
-  background-color: transparent;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
 }
 
 /* =====================================================*/
@@ -57,7 +72,7 @@
   /* border: 3px solid red; */
 }
 .energy-today p {
-  margin-left: 2rem;
+  margin-left: 0.5rem;
   font-size: 2rem;
 }
 .energy-today h1 {
