--- a/src/components/DeviceComponents/Device/SmartTempSensor/SmartTempSensor.css
+++ b/src/components/DeviceComponents/Device/SmartTempSensor/SmartTempSensor.css
@@ -1,31 +1,25 @@
 .smart-temp-sensor {
   width: 100%;
+  padding: 2rem 3rem;
+  padding-left: 4rem;
   background: transparent;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
   min-height: 120px;
   position: relative;
 }
-.smart-temp-sensor-item {
-  width: 120px;
+.temp-sensor-item {
+  width: 150px;
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin: 0.5rem 0.6rem;
+  margin: 1rem 0.5rem;
 }
-.smart-temp-sensor-item p {
-  margin: 0;
-  font-size: 1.7rem;
+.temp-sensor-item p {
+  margin: 0 0.4rem;
+  font-size: 2rem;
   font-weight: 600;
 }
 .temp-item {
-  width: 150px;
-}
-.temp-item p {
-  margin-left: 0.3rem;
-}
-.celsius-icon {
-  margin-bottom: 0.4rem;
-  margin-left: -0.3rem;
+  margin-left: 25px;
 }
