--- a/src/index.css
+++ b/src/index.css
@@ -43,8 +43,8 @@ html {
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap');
 * {
   font-family: 'Red Hat Display', sans-serif;
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0;*/
   box-sizing: border-box;
   text-decoration: none;
 }
@@ -61,7 +61,7 @@ body {
 #root {
   height: 100%;
 }
-body * {
+p {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -77,15 +77,4 @@ label {
 }
 input {
   cursor: revert;
-}
-
-.page-container {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  height: calc(100% - var(--navbar-height));
-  width: 100%;
-  background-color: var(--bck-page-default);
 }
