BIG CHANGES -> many custom components replaced with primereact. Setted toolbar in mobile size

--- a/src/components/DeviceComponents/Device/Device.css
+++ b/src/components/DeviceComponents/Device/Device.css
@@ -1,7 +1,6 @@
-.device-item {
-  width: 20rem;
+.device {
+  width: 340px;
   min-height: 6rem;
-  /* margin: 0.6rem; */
   position: relative;
   background-color: white;
   border-radius: 9px;
