--- a/src/Global.css
+++ b/src/Global.css
@@ -198,34 +198,68 @@
 /* toolbar */
 .toolbar {
   position: sticky;
-  top: var(--navbar-height);
+  top: 0;
   left: 0;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: flex-start;
-  background-color: white;
   width: 100%;
+  overflow: hidden;
   max-height: 10rem;
   height: var(--toolbar-height);
+  padding: 0.2rem 2rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  background-color: white;
   box-shadow: var(--box-shadow-default);
   z-index: 9;
-  padding: 0 2rem;
-  gap: 3rem;
+  transition: all 0.3s ease-out;
 }
-
+.toolbar-section {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1rem;
+}
+.apply-filters-section {
+  display: flex;
+  justify-self: flex-end;
+}
 .toolbar-item {
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 0.5rem;
+  user-select: none;
 }
 
-.toolbar-item > span {
+.toolbar-item > label {
   margin-right: 0.4rem;
-  font-size: 1.2rem;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.toolbar-item-refresh {
+  display: flex;
 }
 
+.dropdown-template {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0.2rem;
+  max-width: 100px;
+  font-size: 18px;
+}
+.toolbar-filter-btn {
+  background: transparent;
+  border: none;
+  padding: 0.3rem;
+  border-radius: 6px;
+}
+.toolbar-filter-btn:hover {
+  cursor: pointer;
+  background-color: var(--bck-grey-light-hover-color);
+}
 .toolbar-add-btn {
   background-color: var(--active-color) !important;
   width: 40px !important;
@@ -242,9 +276,80 @@
     0 1px 2px 0 rgb(0, 0, 0);
 }
 
+.toolbar-item-apply,
+.toolbar-item-filter {
+  display: none;
+}
+
+.colapse-toolbar-btn {
+  position: absolute;
+  right: 2rem;
+  top: 5rem;
+}
+.colapse-toolbar-btn button {
+  background-color: transparent;
+  border: none;
+  padding: 0.3rem;
+  border-radius: 6px;
+}
+.colapse-toolbar-btn button:hover {
+  background-color: var(--bck-grey-light-hover-color);
+}
+
+/* vertical menu */
+.vertical-menu {
+  margin: 0;
+  margin-left: 0.3rem;
+  position: relative;
+  background-color: transparent;
+  user-select: none;
+  padding: 0.4rem;
+  border-radius: 50%;
+  transition: background-color 0.3s ease-in-out;
+}
+.vertical-menu:hover {
+  background-color: var(--bck-grey-hover-color);
+  cursor: pointer;
+}
+.vertical-menu-dots {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 25px;
+  height: 25px;
+}
+
 @media (max-width: 568px) {
   .toolbar {
-    padding: 0;
-    gap: 0.5rem;
+    padding: 0.2rem 0 4rem 0;
+    gap: 3rem;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .toolbar-expanded {
+    position: absolute;
+    max-height: 100%;
+    height: 100%;
+  }
+  .toolbar-section {
+    width: 100%;
+    justify-content: center;
+  }
+  .device-filters-section {
+    width: 100%;
+    padding: 0 2rem;
+    gap: 2rem;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    height: 500px;
+  }
+  .toolbar-item-refresh {
+    display: none;
+  }
+  .toolbar-item-apply,
+  .toolbar-item-filter {
+    display: flex;
   }
 }
