--- a/src/components/SceneComponents/Scene/Scene.css
+++ b/src/components/SceneComponents/Scene/Scene.css
@@ -1,11 +1,10 @@
 .scene {
   display: flex;
   flex-direction: column;
-  width: 22rem;
+  width: 340px;
   background-color: white;
   border-radius: 8px;
   padding: 0.5rem;
-  margin: 0.6rem;
   box-shadow: 1px 1px 14px 1px #888888;
 }
 .scene-top {
@@ -16,7 +15,7 @@
   height: 110px;
 }
 .scene-img {
-  width: 80px;
+  width: 70px;
   margin: 0;
   padding: 0;
   user-select: none;
@@ -37,6 +36,8 @@
 }
 .scene-info h3 {
   font-size: 1.3rem;
+  margin: 0;
+  margin-top: 0.2rem;
 }
 .scene-date {
   position: absolute;
