--- a/src/components/SceneComponents/Scene/Schedule/Schedule.css
+++ b/src/components/SceneComponents/Scene/Schedule/Schedule.css
@@ -18,19 +18,19 @@
   justify-content: space-between;
   height: 120px;
 }
-.schedule-device {
-  width: 160px;
+.schedule-scene-item {
+  width: 140px;
   height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.schedule-device img {
+.schedule-scene-item img {
   max-width: 60px;
   max-height: 70px;
 }
-.schedule-device p {
+.schedule-scene-item p {
   font-size: 1rem;
   font-weight: 600;
   word-break: break-all;
@@ -40,18 +40,12 @@
   text-align: center;
 }
 .arrow-right {
-  width: 3rem;
   height: 65px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.schedule-action {
-  width: 160px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+
 .schedule-text {
   border: 1px solid rgb(173, 173, 173);
   border-radius: 4px;
@@ -64,10 +58,9 @@
 }
 .schedule-text p {
   margin: 0;
+  height: auto;
   margin-left: 0.3rem;
   margin-right: 0.1rem;
-  margin-bottom: -0.2rem;
-  height: 30px;
   color: #6a6a6a;
   font-weight: 600;
 }
@@ -91,13 +84,16 @@
   font-weight: 600;
 }
 .schedule-time-group .schedule-clock-icon {
-  margin: 0 0.3rem;
-  margin-bottom: 0.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 0.3rem;
 }
 .schedule-time-group .schedule-repeat-once-icon {
-  position: absolute;
-  bottom: 0.3rem;
-  right: -1.5rem;
+  margin-left: 0.3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .schedule-repeat {
   width: 100%;
