--- a/src/components/SceneComponents/Scene/WeatherScene/WeatherScene.css
+++ b/src/components/SceneComponents/Scene/WeatherScene/WeatherScene.css
@@ -10,7 +10,6 @@
 }
 .weather-scene-top {
   width: 100%;
-  /* margin-top: 0.4rem; */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -20,7 +19,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 160px;
+  width: 140px;
   height: 100%;
 }
 .weather-scene-name-img {
@@ -57,9 +56,8 @@
 }
 .weather-scene-text p {
   margin: 0;
-  height: 30px;
+  height: auto;
   margin-left: 0.3rem;
-  margin-bottom: -0.2rem;
   color: #6a6a6a;
 }
 .weather-scene-location {
