--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -21,9 +21,8 @@
 }
 
 .sidebar-list {
-  margin-left: 2rem;
-  margin-bottom: 2rem;
-  width: 50%;
+  padding: 0;
+  margin: 0;
   height: 400px;
   display: flex;
   flex-direction: column;
