--- a/src/pages/ScenePages/Scenes/Scenes.css
+++ b/src/pages/ScenePages/Scenes/Scenes.css
@@ -1,7 +1,6 @@
 .scenes-container {
   width: 100%;
   height: 100%;
-  padding-top: 0.5rem;
 }
 
 .scenes {
@@ -12,5 +11,6 @@
   height: calc(100% - var(--toolbar-height));
   width: 100%;
   padding: 1rem;
+  gap: 2rem;
   overflow: auto;
 }
