--- a/src/Global.css
+++ b/src/Global.css
@@ -224,13 +224,13 @@
   justify-self: flex-end;
 }
 .toolbar-item {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 0.5rem;
   user-select: none;
 }
-
 .toolbar-item > label {
   margin-right: 0.4rem;
   font-size: 18px;
@@ -240,15 +240,6 @@
 }
 .toolbar-item-refresh {
   display: flex;
-}
-
-.dropdown-template {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 0.2rem;
-  max-width: 100px;
-  font-size: 18px;
 }
 .toolbar-filter-btn {
   background: transparent;
@@ -275,12 +266,46 @@
   box-shadow: 0 0 0 2px #ffffff, 0 0 0 4px var(--active-color),
     0 1px 2px 0 rgb(0, 0, 0);
 }
-
-.toolbar-item-apply,
 .toolbar-item-filter {
   display: none;
+  position: relative;
 }
-
+.active-filter-indicator {
+  display: block;
+  position: absolute;
+  top: 6px;
+  left: 3px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: red;
+}
+.toolbar-item-filter-indicator {
+  display: block;
+  position: absolute;
+  top: 8px;
+  left: -5px;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: red;
+}
+.toolbar-item-filter-indicator-hidden {
+  display: none;
+}
+.active-filter-indicator-hidden {
+  display: none;
+}
+.toolbar-item-apply {
+  display: none;
+}
+.toolbar-vertical-line {
+  display: block;
+  width: 0px;
+  height: 80%;
+  float: left;
+  border: 1px inset;
+}
 .colapse-toolbar-btn {
   position: absolute;
   right: 2rem;
@@ -294,6 +319,14 @@
 }
 .colapse-toolbar-btn button:hover {
   background-color: var(--bck-grey-light-hover-color);
+}
+.dropdown-template {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0.2rem;
+  max-width: 100px;
+  font-size: 18px;
 }
 
 /* vertical menu */
@@ -345,11 +378,11 @@
     justify-content: flex-start;
     height: 500px;
   }
-  .toolbar-item-refresh {
-    display: none;
-  }
   .toolbar-item-apply,
   .toolbar-item-filter {
     display: flex;
+  }
+  .toolbar-vertical-line {
+    display: none;
   }
 }
