--- a/src/components/DeviceComponents/Device/DeletedDevice/DeletedDevice.css
+++ b/src/components/DeviceComponents/Device/DeletedDevice/DeletedDevice.css
@@ -4,13 +4,14 @@
 }
 .deleted-device {
   width: 100%;
+  padding-left: 0.2rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 0.2rem 0;
   border: 1px solid black;
   border-radius: 5px;
-  height: 35px;
+  height: 40px;
 }
 
 .deleted-device-info {
@@ -18,19 +19,28 @@
   align-items: center;
   justify-content: center;
 }
+.deleted-device-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .deleted-device-icon svg {
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
 }
 .deleted-device-name {
   margin-left: 0.3rem;
-  font-size: 1rem;
+  font-size: 1.1rem;
+  width: 200px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .deleted-device-btns {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 0.5rem;
+  gap: 0.7rem;
   margin-right: 0.3rem;
 }
 .deleted-device-btn {
