--- a/src/components/DeviceComponents/Device/SmartStrip/SmartStrip.css
+++ b/src/components/DeviceComponents/Device/SmartStrip/SmartStrip.css
@@ -25,19 +25,22 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  gap: 0.5rem;
   padding: 0 1rem;
 }
 
 /* =====================================================*/
 .sensor-container {
   display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
   align-items: center;
   justify-content: center;
   width: 100%;
 }
 .sensor {
   background-color: transparent;
-  margin-left: 2.5rem;
+  margin-left: 3rem;
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
