--- a/src/components/SceneComponents/Scene/DeviceScene/DeviceScene.css
+++ b/src/components/SceneComponents/Scene/DeviceScene/DeviceScene.css
@@ -3,7 +3,7 @@
   background-color: transparent;
   width: 100%;
   flex-direction: column;
-  padding: 0.7rem 0rem;
+  padding: 0.7rem 0;
   position: relative;
   height: 160px;
   margin-top: 0.5rem;
@@ -29,18 +29,21 @@
   align-items: center;
   justify-content: center;
 }
-.device-scene-item img {
-  max-width: 60px;
+.device-scene-name-img svg {
+  max-width: 70px;
   max-height: 70px;
 }
-.device-scene-item p {
+.device-scene-name-img p {
+  width: 140px;
   font-size: 1rem;
   font-weight: 600;
-  word-break: wrap;
-  width: 100%;
-  height: 60px;
+  text-align: center;
+  text-decoration: none;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   margin: 0;
   text-overflow: ellipsis;
+  overflow: hidden;
   text-align: center;
 }
 .device-scene-text {
@@ -52,10 +55,11 @@
   justify-content: center;
   padding: 0.2rem;
   height: 30px;
+  gap: 3px;
 }
 .device-scene-text p {
+  font-size: 1rem;
+  font-weight: 600;
   margin: 0;
-  height: auto;
-  margin-left: 0.3rem;
   color: #6a6a6a;
 }
