--- a/src/components/SceneComponents/Scene/Schedule/Schedule.css
+++ b/src/components/SceneComponents/Scene/Schedule/Schedule.css
@@ -3,40 +3,47 @@
   background-color: transparent;
   width: 100%;
   flex-direction: column;
-  padding: 0.7rem 0;
-  padding-top: 0.3rem;
   position: relative;
   height: 160px;
   margin-top: 0.5rem;
-  overflow: hidden;
 }
 .schedule-top {
   width: 100%;
-  margin-top: 0.4rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 120px;
 }
 .schedule-scene-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 140px;
+}
+.schedule-scene-name-img {
+  width: 100%;
   height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.schedule-scene-item img {
-  max-width: 60px;
+.schedule-scene-name-img svg {
+  max-width: 70px;
   max-height: 70px;
 }
-.schedule-scene-item p {
+.schedule-scene-name-img p {
+  width: 140px;
   font-size: 1rem;
   font-weight: 600;
-  word-break: break-all;
-  width: 100%;
-  height: 48px;
+  text-align: center;
+  text-decoration: none;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   margin: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
   text-align: center;
 }
 .arrow-right {
@@ -55,14 +62,13 @@
   justify-content: center;
   padding: 0.2rem;
   height: 30px;
+  gap: 3px;
 }
 .schedule-text p {
-  margin: 0;
-  height: auto;
-  margin-left: 0.3rem;
-  margin-right: 0.1rem;
-  color: #6a6a6a;
+  font-size: 1rem;
   font-weight: 600;
+  margin: 0;
+  color: #6a6a6a;
 }
 .schedule-time {
   margin-bottom: 0.2rem;
