--- a/src/components/SceneComponents/Scene/WeatherScene/WeatherScene.css
+++ b/src/components/SceneComponents/Scene/WeatherScene/WeatherScene.css
@@ -30,18 +30,21 @@
   align-items: center;
   justify-content: center;
 }
-.weather-scene-item img {
-  max-width: 60px;
+.weather-scene-name-img svg {
+  max-width: 70px;
   max-height: 70px;
 }
-.weather-scene-item p {
+.weather-scene-name-img p {
+  width: 140px;
   font-size: 1rem;
   font-weight: 600;
-  word-break: wrap;
-  width: 100%;
-  height: 60px;
+  text-align: center;
+  text-decoration: none;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   margin: 0;
   text-overflow: ellipsis;
+  overflow: hidden;
   text-align: center;
 }
 .weather-scene-text {
@@ -53,11 +56,12 @@
   justify-content: center;
   padding: 0.2rem;
   height: 30px;
+  gap: 3px;
 }
 .weather-scene-text p {
+  font-size: 1rem;
+  font-weight: 600;
   margin: 0;
-  height: auto;
-  margin-left: 0.3rem;
   color: #6a6a6a;
 }
 .weather-scene-location {
