--- a/src/pages/DevicePages/AddDevice/AddDevice.css
+++ b/src/pages/DevicePages/AddDevice/AddDevice.css
@@ -1,4 +1,275 @@
-.btn-add-device {
-  width: 50%;
-  justify-self: center;
+.device-stepper-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem 0.5rem;
+}
+.device-stepper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  max-width: 600px;
+  background-color: white;
+  padding: 1rem;
+  border-radius: 6px;
+}
+.device-stepper .content-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 90%;
+  max-height: 480px;
+  border-radius: 6px;
+  border: var(--dashed-border-basic);
+}
+.device-stepper .initial-setup-container {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  width: 100%;
+  height: 100%;
+}
+.device-stepper .all-groups-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+.all-groups-container .type-groups-container,
+.all-groups-container .sub-type-groups-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.all-groups-container .type-groups-container {
+  align-items: center;
+  width: 260px;
+  border-right: var(--dashed-border-basic);
+}
+.all-groups-container .sub-type-groups-container {
+  width: 100%;
+}
+.all-groups-container .type-groups-title,
+.all-groups-container .sub-type-groups-title {
+  font-size: 1.1rem;
+  width: 100%;
+  font-weight: 600;
+  color: black;
+  padding: 0.5rem 0;
+  border-bottom: var(--dashed-border-basic);
+}
+.all-groups-container .type-groups,
+.all-groups-container .sub-type-groups {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  overflow-y: auto;
+  padding: 0.5rem 0;
+}
+.all-groups-container .type-groups {
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.all-groups-container .sub-type-groups {
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+  padding: 0.5rem;
+}
+.all-groups-container .type-group,
+.all-groups-container .sub-type-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 6px;
+  cursor: pointer;
+  color: black;
+  border-color: black;
+  width: 130px;
+  font-size: 1rem;
+}
+.type-group svg,
+.sub-type-group svg {
+  width: 40px;
+  height: 40px;
+}
+.all-groups-container .type-group-selected,
+.all-groups-container .sub-type-group-selected {
+  color: var(--hover-color);
+  border-color: var(--hover-color);
+}
+.all-groups-container .empty-sub-type-groups {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.empty-sub-type-groups p {
+  font-size: 1.2rem;
+  color: black;
+  width: 100%;
+}
+.device-stepper .device-config-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  height: 100%;
+}
+.device-config-container .sub-device-container,
+.device-config-container .select-group-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 1rem;
+  max-width: 515px;
+}
+.device-config-container .sub-device-container {
+  border-bottom: var(--dashed-border-basic);
+}
+.device-config-container .sub-device-container-hidden {
+  display: none;
+}
+.device-stepper .buttons {
+  margin-top: 0.5rem;
+  width: 100%;
+  display: flex;
+  gap: 2rem;
+}
+.device-stepper .summarised-data-container {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  height: 100%;
+}
+.summarised-data-container .summarised-data {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  height: 100%;
+}
+.summarised-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+.summarised-data-row {
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  width: 100%;
+}
+.summarised-data-row p {
+  word-wrap: break-word;
+  max-width: 200px;
+}
+.summarised-data-row svg {
+  width: 30px;
+  height: 30px;
+}
+.summarised-attributes-row {
+  align-items: flex-start;
+  text-transform: capitalize;
+}
+.summarised-attributes {
+  display: flex;
+  flex-direction: column;
+  margin-top: -1px;
+}
+.attribute-data-row {
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  width: 100%;
+}
+.attribute-data-row p {
+  text-transform: lowercase;
+}
+.attribute-data-row p::first-letter {
+  text-transform: uppercase;
+}
+.previous-steps-required-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  font-size: 1.2rem;
+}
+.result-message-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-self: flex-end;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .device-stepper {
+    padding: 0;
+  }
+  .device-stepper-container {
+    padding: 0.5rem;
+    padding-left: 0;
+    background-color: white;
+  }
+  .device-stepper .content-container {
+    height: 85%;
+    max-height: 440px;
+  }
+  .all-groups-container .type-groups-container {
+    width: 180px;
+  }
+  .sub-type-groups-container .sub-type-groups {
+    gap: 0.5rem;
+  }
+  .all-groups-container .type-groups-title,
+  .all-groups-container .sub-type-groups-title {
+    font-size: 1rem;
+  }
+  .all-groups-container .type-group p,
+  .all-groups-container .sub-type-group p {
+    font-size: 0.75rem;
+  }
+  .all-groups-container .type-group svg,
+  .all-groups-container .sub-type-group svg {
+    width: 35px;
+    height: 35px;
+  }
+  .all-groups-container .type-group,
+  .all-groups-container .sub-type-group {
+    width: 90px;
+  }
+  .empty-sub-type-groups p {
+    font-size: 1rem;
+  }
+  .device-config-container .sub-device-container,
+  .device-config-container .select-group-container {
+    max-width: 350px;
+  }
+  .summarised-data-container .summarised-data {
+    gap: 0.5rem;
+  }
+}
+
+/* overwrite primereact default stepper styles*/
+.p-stepper.p-stepper-vertical .p-stepper-panel:last-of-type .p-stepper-content {
+  padding-left: 1.4rem;
+}
+.p-stepper-title {
+  font-size: 1.3rem;
+}
+.p-stepper.p-stepper-vertical .p-stepper-panel .p-stepper-separator {
+  margin-inline-start: 0.8rem;
 }
